<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.saktiva.tamanwisataselecta.MainActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="240dp"
                    android:background="@drawable/slide2"
                    android:textAlignment="center"
                    android:textSize="24sp"
                    android:gravity="bottom"
                    />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:textAlignment="center"
                android:text="TENTANG TAMAN WISATA SELECTA"
                android:textColor="@color/colorWhite"
                android:fontFamily="sans-serif-smallcaps"
                android:background="@color/colorPrimaryDark"
                android:textSize="24sp"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textAlignment="textStart"
                android:text="Jam Buka"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-smallcaps"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center"


                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:text="@string/jambuka" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:text="@string/garis"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textAlignment="textStart"
                android:text="Sejarah"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-smallcaps"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center"


                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:text="@string/sejarah" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:text="@string/garis"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="30dp"
                android:textAlignment="textStart"
                android:text="Visi-Misi"
                android:layout_marginTop="10dp"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-smallcaps"
                android:textStyle="bold"
                android:textSize="16sp"
                android:gravity="center"
                />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:textSize="12sp"
                android:layout_marginTop="10dp"
                android:text="@string/visimisi"   />


        </LinearLayout>

        </ScrollView>

