<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.saktiva.tamanwisataselecta.DaftarHarga">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:background="@drawable/galeri6"
            android:textAlignment="center"
            android:textSize="24sp"
            android:gravity="bottom"
            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:textAlignment="center"
            android:text="DAFTAR HARGA"
            android:textColor="@color/colorWhite"
            android:fontFamily="sans-serif-smallcaps"
            android:background="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textAlignment="textStart"
            android:text="Harga Tiket Masuk Untuk Pribadi:"
            android:layout_marginTop="10dp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"


            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:text="@string/hrg_pribadi" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:text="@string/garis"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textAlignment="textStart"
            android:text="Harga Tiket Masuk Rombongan:"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-smallcaps"
            android:textStyle="bold"
            android:textSize="16sp"
            android:gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:text="@string/hrg_rombongan"
            android:id="@+id/textView2" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:text="@string/garis"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textAlignment="textStart"
            android:text="Harga Penyewaan Perlengkapan dan Wahana:"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:background="@drawable/list_harga"
            android:layout_gravity="center"
            android:gravity="center"
            android:scaleType="fitXY"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:text="@string/garis"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:textAlignment="textStart"
            android:text="Harga Tarif Parkir Kendaraan"
            android:layout_marginTop="20dp"
            android:textColor="@color/black"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="16sp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:background="@drawable/parkir_list"
            android:layout_gravity="center"
            android:gravity="center"
            android:scaleType="fitXY"
            />
    </LinearLayout>

</ScrollView>

