<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.saktiva.tamanwisataselecta.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="2"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:textAlignment="center"
            android:text="KONTAK"
            android:textColor="@color/colorWhite"
            android:fontFamily="sans-serif-smallcaps"
            android:background="@color/colorPrimaryDark"
            android:textSize="24sp"
            android:textStyle="bold"
            android:gravity="center"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textColor="@color/black"
            android:layout_marginTop="10dp"
            android:textSize="14sp"
            android:text="@string/alamat"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:text="@string/garis"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_weight="1">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:textColor="@color/black"
                android:layout_marginTop="10dp"
                android:textSize="14sp"
                android:text="@string/kontak"
                />

        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:text="@string/garis"
            />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:textAlignment="textStart"
                android:text="KONTAK KAMI"
                android:textColor="@color/black"
                android:fontFamily="sans-serif-smallcaps"
                android:textSize="18sp"
                android:textStyle="bold"
                android:gravity="center"
                />


            <EditText
                android:id="@+id/editText1"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/textView1"
                android:layout_below="@+id/textView1"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:textSize="14sp"
                android:hint="No KTP">
                <requestFocus />
            </EditText>

            <EditText
                android:id="@+id/editText2"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/textView2"
                android:layout_below="@+id/textView2"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:textSize="14sp"
                android:hint="Nama"
                android:layout_marginTop="5dp"/>


            <EditText
                android:id="@+id/editText3"
                android:layout_width="250dp"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/textView3"
                android:layout_below="@+id/textView3"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:textSize="14sp"
                android:hint="Email"
                android:layout_marginTop="5dp" />


            <EditText
                android:id="@+id/editText4"
                android:layout_width="250dp"
                android:layout_height="100dp"
                android:layout_alignLeft="@+id/textView4"
                android:layout_below="@+id/textView4"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:textSize="14sp"
                android:hint="Isi Pesan"
                android:layout_marginTop="5dp" />

            <Button
                android:id="@+id/btnSimpan"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/editText4"
                android:layout_alignParentBottom="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:textSize="14sp"
                android:text="kirim"
                android:layout_marginTop="5dp"/>
            <Button
                android:id="@+id/btn_cekdatabase"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_alignLeft="@+id/editText4"
                android:layout_alignParentBottom="true"
                android:textColor="@color/colorWhite"
                android:textColorHint="@color/colorWhite"
                android:background="@color/colorPrimary"
                android:textSize="14sp"
                android:text="cek"
                android:layout_marginTop="5dp"/>



        </LinearLayout>

    </LinearLayout>




</LinearLayout>
